# security_content

./: .gitignore  .gitlab-ci.yml  .gitlabs-ci.yml  .gitmodules  .gitpod.yml  .pre-commit-config.yaml  .semgrepignore  =4.0.0  CODEOWNERS  CODE_OF_CONDUCT.md  README.md  SECURITY.md  change.py  config.yml  contentctl.py  contentctl.yml  contentctl_test.yml  data_source_file_name_changer.py  detection_for_inactive_users_with_a_certain_period_who_suddenly_have_activity.yml  dist.tar.zst  docs.tar.zst  pyproject.toml  requirements.txt  simple_test.txt  summary.yml  throwAwaySubs.sed  tmp.js
.circleci/: config.yml
.dependabot/: config.yml
.github/: CODEOWNERS  CONTRIBUTING.md  auto_assign.yml  auto_update.yml  dependabot.yml  labeler.yml  pull_request_template.md
app_template/: README.md
automated_detection_testing/: Dockerfile  README.md  detection_service.py  requirements.txt
baseline_searches/: previously_seen_aws_regions.yml
baselines/: add_prohibited_processes_to_enterprise_security.yml  add_prohibited_processes_to_es.json  add_prohibited_processes_to_es.yml  approved_aws_service_accounts.json  approved_aws_service_accounts.yml  assets_sorted_by_category.json  assets_sorted_by_category.yml  baseline_api_calls_per_user_arn.json  baseline_api_calls_per_user_arn.yml  baseline_api_calls_per_user_arn_mltk.yml  baseline_api_calls_per_user_arn_mltk.ymlbak2  baseline_aws_regions.json  baseline_aws_regions.yml  baseline_blocked_vpc_traffic.json  baseline_blocked_vpc_traffic_mltk.yml  baseline_blocked_vpc_traffic_mltk.ymlbak  baseline_blocked_vpc_traffic_mltk.ymlbak2  (+182 more)
(+11816 files in other folders)
